Apply SE-EDU Java standard to code
Java classes have inconsistent imports, documentation, and mutable
implementation details that make the code harder to review.

Apply consistent layout, final fields, explicit imports, and public API
Javadocs. Correct task-list copying and task-index retention to improve
type safety and ensure the selected task is updated. Add regression
coverage for both behaviors.